# claude-foreman

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/claude-foreman/: SKILL.md
.github/workflows/: ci.yml
.tasks/: 001-rebrand-foreman.md  002-boxing-emojis.md  003-cursor-bridge.md  004-register-cursor.md  005-github-actions-ci.md  006-generic-bridge-factory.md  007-update-tests.md  008-full-test-suite.md  009-cascade-reader-extension.md  010-extension-v2.md  011-model-selector.md  DISPATCH_PLAYBOOK.md  README.md
extension/foreman-bridge/: README.md  foreman-bridge-0.1.0.vsix  package-lock.json  package.json
extension/foreman-bridge/src/: extension.ts
foreman/: bridge_interface.py  cli.py  config.py  github.py  models.py
foreman/comms/: telegram.py
foreman/drivers/: cascade_bridge.py  cursor_bridge.py  gemini_bridge.py  ide_driver.py  model_switcher.py
foreman/drivers/applescript/: detect_ide.scpt  select_model.scpt  windsurf_cascade.scpt
foreman/ring/: learnings.py  loop.py  router.py  state.py  takeover.py  watcher.py
tests/: conftest.py
tests/foreman/: test_cascade_bridge.py  test_cli.py  test_config.py  test_cursor_bridge.py  test_gemini_bridge.py  test_ide_driver.py  test_learnings.py  test_loop.py  test_model_switcher.py  test_models.py  test_router.py  test_state.py  test_takeover.py  test_watcher.py
